<resources>
    <string name="app_name">"Widom "</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="sign_up_here">Sign up here!</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="title_activity_register">Sign up</string>
    <string name="user_registration">User Registration</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_widom_list">Widom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_widom_list">Widom list</string>
    <string name="nav_add_task">Add task</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_map">Map</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_about_us">About us</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_add_widom">Add task</string>
    <string name="done">Done</string>
    <string name="add_task">Add task</string>
    <string name="delete_task">Delete</string>
    <string name="example_task">Exmaple</string>
    <string name="show_token">Show token</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_chat_main">Chat Main</string>
    <string name="title_activity_chat_room">Chat Room</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_bar_refresh">Refresh</string>
    <string name="action_bar_add_task">Add task</string>
    <string name="action_bar_logaut">Logout</string>
    <string name="action_bar_exit">Exit</string>
    <string name="action_dialog_exit">Do you want to exit?</string>
    <string name="action_dialog_yes">Yes</string>
    <string name="action_dialog_no">Cancel</string>
    <string name="action_add_new_task_title">Add a new task</string>
    <string name="action_add_new_task_message">What do you want to do next?</string>
    <string name="action_add_new_task_add">Add</string>
    <string name="action_add_new_task_cancel">Cancel</string>
    <string name="window_dialog"><u>Contact us</u></string>
    <string name="textviev_about_as"><p>The application developer has made every effort to act efficiently and without errors. \n\n In case of any problem please contact us at the address below: \n\n
    Jan Kowalski \n Adress e-mail: jKowal@gmail.com \n Phone: 123-456-789 \n\n
    Thank you for using the application!</p></string>
    <string name="proces_login_ok"><u>Login successful</u></string>
    <string name="proces_register_ok"><u>Registration successful</u></string>
    <string name="login_reg_please_wait">Please wait...</string>
    <string name="login_reg_processing">Processing...</string>
    <string name="chat_main_enter_your_name">Enter your name:</string>
    <string name="chat_main_ok">Ok</string>
    <string name="chat_main_cancel">Cancel</string>
    <string name="widomList_add_task_not_empty">Name Must Not Be Empty</string>
    <string name="WidomList_add_task_save_database">Save To Database</string>
    <string name="title_input_dialog">Title</string>
    <string name="author_input_dialog">Author</string>
    <string name="description_input_dialog">Description</string>
    <string name="save_input_dialog">Save</string>
    <string name="title_activity_contact">Contacts</string>
</resources>
