<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="schemas.android.com/tools"
    tools:context="com.example.sample.WidomListActivity"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_refrsh"
        android:title="@string/action_bar_refresh"
        android:icon="@drawable/ic_autorenew_black_24dp"
        yourapp:showAsAction="always"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/action_add_task"
        android:title="@string/action_bar_add_task"
        android:icon="@drawable/ic_add_task"
        yourapp:showAsAction="always"
        android:orderInCategory="101" />

<group android:checkableBehavior="single">
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_bar_logaut"
        android:orderInCategory="102"
        android:visible="true" />
    <item
        android:id="@+id/action_exit"
        android:title="@string/action_bar_exit"
        android:orderInCategory="103"
        android:visible="true" />
</group>

</menu>