<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameEditTextTask"
            android:hint="@string/title_input_dialog"
            android:padding="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/authorEditTextTask"
            android:hint="@string/author_input_dialog"
            android:padding="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/descEditTextTask"
            android:hint="@string/description_input_dialog"
            android:padding="15dp" />

        <Button
            android:layout_marginTop="20dp"
            android:text="@string/save_input_dialog"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtnTask"
            android:elevation="22dp"
            android:background="@color/colorAccent"
            android:layout_width="300dp" />
    </LinearLayout>
</LinearLayout>