<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dianielm.widom.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="190dip"
        android:layout_height="160dip"
        app:srcCompat="@drawable/task_login"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true">

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailLogin_et"
            android:hint="@string/enter_your_e_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/passwordLogin_et"
            android:hint="@string/enter_your_password"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/userLogin_btn"
            android:text="@string/login"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnUserLogin_Click"/>

        <TextView
            android:id="@+id/signIn_link"
            android:text="@string/sign_up_here"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="link_Registration_Click"/>

    </LinearLayout>

</RelativeLayout>
